--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -14,6 +14,10 @@ jobs:
         run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
       - name: Wasm-pack build
         run: wasm-pack build --target web
+      - name: Create github pages artifacts
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: ./pkg
   deploy:
     needs: build
     permissions:
